--- a/index.html
+++ b/index.html
@@ -39,7 +39,9 @@
                 <div>
                     <p class="hover:underline">About Us</p>
                 </div>
-                
+                <div>
+                    <p class="hover:underline">Contact</p>
+                </div>
 
             </div>
         </nav>
